# chatgpt-export-analyzer

./: .gitignore  README.md  analyze.py  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  pricing.json  prompt.md  pyproject.toml  requirements.txt  serve.py  tsconfig.app.json  tsconfig.node.json  vite.config.ts
.github/workflows/: ci.yml  pages.yml
.work-notes/: dev-fix-pr-ci.md
.work-notes/chatgpt-export-analytics-audit/: implementation.md  notes.md  plan.md
.work-notes/markdown-download/: implementation.md  notes.md  plan.md  reviews.md
.work-notes/website/: implementation.md  notes.md  plan.md  reviews.md  validation.md
chatgpt_analytics/: __init__.py  analytics.py  models.py  parser.py  pricing.py  reporting.py
chatgpt_analytics/templates/: report.html.j2
scripts/: benchmark-browser-export.ts
src/: App.tsx  styles.css  vite-env.d.ts
src/analysis/: analytics.test.ts  analytics.ts  markdown.test.ts  markdown.ts  parser.test.ts  parser.ts  pricing.ts  reasoningScenario.test.ts  reasoningScenario.ts  types.ts
src/components/: TopBar.tsx  UploadDropzone.tsx
src/export/: ExportSession.tsx
src/hooks/: useExportAnalysis.ts  useTheme.test.tsx  useTheme.tsx
src/pages/: ReportPage.test.tsx  ReportPage.tsx  UploadPage.test.tsx  UploadPage.tsx
src/storage/: reportRepository.test.ts  reportRepository.ts
src/worker/: analyze.worker.test.ts  analyze.worker.ts  analyzeExport.ts  exportMarkdown.ts  protocol.ts  readConversations.ts
tests/: test_parser_and_analytics.py
tests/browser/: upload-report.spec.ts
(+8 files in other folders)
