[project]
name = "chatgpt-export-analytics"
version = "0.1.0"
description = "Offline token and API cost analytics for ChatGPT exports"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "tiktoken>=0.8", "pandas>=2.2", "plotly>=5.24", "jinja2>=3.1",
  "tqdm>=4.66", "python-dateutil>=2.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.3"]

[tool.pytest.ini_options]
testpaths = ["tests"]
